--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,8 +16,10 @@
     "@fontsource/roboto": "^5.0.8",
     "@lottiefiles/react-lottie-player": "^3.5.3",
     "@mui/icons-material": "^5.14.8",
+    "@mui/joy": "^5.0.0-beta.10",
     "@mui/material": "^5.14.8",
     "@mui/styled-engine-sc": "^5.14.8",
+    "axios": "^1.5.1",
     "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
@@ -26,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-json-pretty": "^2.2.0",
     "react-leaflet": "^4.2.1",
+    "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.15.0",
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.11"
